# MolView

./: .gitignore  MolView.spec  pyproject.toml  requirements.txt
src/molview/: __init__.py  __main__.py  main.py
src/molview/chem/: external_lookup.py  mmp.py  property_calculator.py  rgroup.py  search.py  structure_utils.py
src/molview/gui/: main_window.py  molview_icon.icns  themes.py
src/molview/gui/dialogs/: column_format_dialog.py  custom_column_dialog.py  lookup_dialog.py  mmp_dialog.py  plot_settings_dialog.py  property_calc_dialog.py  rgroup_dialog.py  search_dialog.py  shortcuts_dialog.py
src/molview/gui/plotting/: bar_chart.py  plot_panel.py  scatter_matrix.py  scatter_plot.py
src/molview/gui/structure_editor/: editor_dialog.py
src/molview/gui/structure_editor/ketcher/: index.html
src/molview/gui/structure_editor/ketcher/assets/: index-DW-y-9zh.css  index.modern-BiTsteMG.js  index.modern-b9db71c5-CbaEFTu2.js  lodash-K0Nyn06M.js
src/molview/gui/table/: delegates.py  filter_proxy.py  table_model.py  table_view.py
src/molview/io/: csv_handler.py  excel_handler.py  mol_handler.py  sdf_handler.py
src/molview/models/: column_schema.py  dataset.py  undo_commands.py
src/molview/workers/: calc_worker.py  io_worker.py  search_worker.py
test_data/: sample.csv
